If we cannot establish a profileName, do not create a colorspace

BUG:327333